--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -6,7 +6,6 @@ main {
     background: $primary-color;
     color: $white;
 
-
     h1 {
       @include clearBack;
       position: relative;
@@ -33,10 +32,122 @@ main {
       font-size: $font-context;
 
       .megaphone {
-        width: 11px;
-        margin-right: 12px;
+        font-size: 13px;
+        margin-right: 5px;
       }
     }
 
+    .tabs {
+      @include clearList;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      margin: 2.5rem 30px 0;
+
+      li {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        box-sizing: border-box;
+        width: 13.8rem;
+        height: 4.8rem;
+        padding: 8px;
+        border: 2px solid $white;
+        border-radius: 5px;
+
+        .text {
+          font-size: $font-assistant;
+
+          b {
+            font-size: 2.1rem;
+            font-weight: normal;
+          }
+
+          small {
+            font-size: 0.9rem;
+          }
+        }
+
+        .icon {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+
+  .section-main {
+    .steps {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 14px 18px;
+
+      span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .icon {
+          font-size: 20px;
+        }
+      }
+    }
+
+    .list {
+      @include clearList;
+      padding: 15px 13px;
+
+      li {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 8px 15px;
+        background:rgba(255,249,247,1);
+        border-radius:7px;
+        line-height: 1.6;
+
+        .main {
+          display: flex;
+          flex-direction: column;
+          font-size: $font-title;
+
+          small{
+            font-size: 1rem;
+          }
+
+          span{
+            font-size: 1.1rem;
+          }
+        }
+
+        .aside {
+          display: flex;
+          flex-direction: column;
+          text-align: right;
+
+          time{
+            padding-bottom: 5px;
+          }
+        }
+      }
+    }
+
+    .null {
+      padding: 10rem 0;
+      text-align: center;
+      color: $text-sub-color;
+
+      img {
+        width: 9.9rem;
+        height: 6.5rem;
+        margin-bottom: 14px;
+      }
+    }
   }
 }
