add inviter friend

--- a/app/src/styles/mixin.scss
+++ b/app/src/styles/mixin.scss
@@ -95,9 +95,10 @@
 @mixin clearButton() {
   background-color: transparent;
   border: 0;
+  outline: none;
   color: inherit;
   cursor: pointer;
-  display: block;
+  //display: block;
   font-family: inherit;
   position: relative;
 }
