--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -6,6 +6,11 @@ main {
     background: $primary-color;
     color: $white;
 
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
     h1 {
       @include clearBack;
       position: relative;
@@ -108,8 +113,8 @@ main {
         align-items: center;
 
         padding: 8px 15px;
-        background:rgba(255,249,247,1);
-        border-radius:7px;
+        background: rgba(255, 249, 247, 1);
+        border-radius: 7px;
         line-height: 1.6;
 
         .main {
@@ -117,11 +122,11 @@ main {
           flex-direction: column;
           font-size: $font-title;
 
-          small{
+          small {
             font-size: 1rem;
           }
 
-          span{
+          span {
             font-size: 1.1rem;
           }
         }
@@ -131,7 +136,7 @@ main {
           flex-direction: column;
           text-align: right;
 
-          time{
+          time {
             padding-bottom: 5px;
           }
         }
