--- a/app/src/components/common/Header.scss
+++ b/app/src/components/common/Header.scss
@@ -1,13 +1,31 @@
+@import "../../styles/mixin";
+
 #common-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
+  width: 100%;
   height: 44px;
-  padding: 1.8rem 2.8rem;
+  padding: 0 16px;
+
+  &.shadow {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.04);
+  }
+
+  &.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+  }
 
   img {
     width: 0.8rem;
     height: 1.5rem;
+  }
+
+  span {
+    font-size: $font-title;
   }
 }
