--- a/app/src/styles/_variable.scss
+++ b/app/src/styles/_variable.scss
@@ -17,7 +17,7 @@ $bg-btn-disabled: #a1a4ac;
 
 /* Default colors */
 $primary-color: #e8713a; // 主题色
-$assistant-color: #fa800; // 辅助色
+$assistant-color: #2A76DD; // 辅助色
 
 $succeed-color: #29b056; // 通过、成功
 $warn-color: #fa8100; // 提醒、警告
@@ -45,10 +45,10 @@ $font-title-xl: 2.8rem; // 大标题
 
 /* Font family */
 $font-style-cn: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-style-en: PingFangSC-Light, PingFang SC, Arial, sans-serif;
 $font-regular: PingFangSC-Regular, PingFang SC, Hiragino Sans GB, Arial,
-  sans-serif;
+sans-serif;
 $font-serif: SimSun, "宋体", serif;
 
 /* Space width */
@@ -59,3 +59,5 @@ $space-width-l: 20px;
 /* Other */
 $box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
 $border-radius: 4px;
+$header-height: 44px;
+$footer-height: 49px;
