--- a/app/src/pages/home/Generalize.scss
+++ b/app/src/pages/home/Generalize.scss
@@ -4,6 +4,22 @@
 
   .section-banner {
     height: 17.7rem;
+    background: url("../../assets/png/generalize-banner.png") center;
+    background-size: cover;
+    color: $white;
+
+    h1 {
+      @include clearBack;
+
+
+      padding: 1.9rem 30px 1.1rem;
+      font-size: 2.4rem;
+
+      .icon {
+        font-size: 2.8rem;
+        font-weight: lighter;
+      }
+    }
   }
 
 }
