--- a/app/src/components/common/Header.scss
+++ b/app/src/components/common/Header.scss
@@ -1,6 +1,8 @@
-@import "../../styles/mixin";
+@import '../../styles/mixin';
 
 #common-header {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,6 +20,10 @@
     top: 0;
     left: 0;
     z-index: 9;
+  }
+
+  &.bg-White {
+    background: white;
   }
 
   img {
