--- a/app/src/styles/mixin.scss
+++ b/app/src/styles/mixin.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "./_variable";
+@import './_variable';
 
 /*超行溢出显示省略号*/
 @mixin overflow($num: 1, $fontSize: 0, $lineHeight: 1.5) {
@@ -22,11 +22,11 @@
 
     height: $num * $fontSize * $lineHeight;
 
-    [data-dpr="2"] & {
+    [data-dpr='2'] & {
       height: $num * $fontSize * $lineHeight * 2 !important;
     }
 
-    [data-dpr="3"] & {
+    [data-dpr='3'] & {
       height: $num * $fontSize * $lineHeight * 3 !important;
     }
   }
@@ -65,6 +65,24 @@
   transform: rotate($deg);
 }
 
+@mixin background-gradient($color-from, $color-to) {
+  background: $color-from;
+  background: -moz-linear-gradient(left, $color-from 0%, $color-to 100%);
+  background: -webkit-gradient(
+    left top,
+    right top,
+    color-stop(0%, $color-from),
+    color-stop(100%, $color-to)
+  );
+  background: -webkit-linear-gradient(left, $color-from 0%, $color-to 100%);
+  background: -o-linear-gradient(left, $color-from 0%, $color-to 100%);
+  background: -ms-linear-gradient(left, $color-from 0%, $color-to 100%);
+  background: linear-gradient(to right, $color-from 0%, $color-to 100%);
+  /* stylelint-disable function-name-case */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$color-from}', endColorstr='#{$color-to}', GradientType=1);
+  /* stylelint-enable function-name-case */
+}
+
 // 清除内外边距
 @mixin clearBack() {
   margin: 0;
@@ -82,7 +100,7 @@
 @mixin clearFix() {
   &::before,
   &::after {
-    content: " ";
+    content: ' ';
     display: table;
   }
 
