--- a/app/src/pages/home/DepositHistory.scss
+++ b/app/src/pages/home/DepositHistory.scss
@@ -1,17 +1,28 @@
 @import "../../styles/mixin";
 
 #deposit-history {
+  @include clearFix;
   box-sizing: border-box;
   min-height: 100vh;
+  padding-top: $header-height;
   background: rgba(247, 247, 248, 1);
+
+  header {
+    background: $white;
+  }
 
   ul {
     @include clearList;
 
     li {
+      margin-top: 15px;
+      padding-bottom: 12px;
+      background: $white;
+
       aside {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
 
         height: 40px;
@@ -23,7 +34,22 @@
         }
 
         small {
+          font-size: $font-context;
           color: #36C2CF;
+        }
+      }
+
+      p {
+        @include clearBack;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 16px 0;
+        line-height: 1.6;
+
+        label {
+          color: $text-sub-color;
         }
       }
     }
