--- a/app/src/pages/user/VerifiedUpload.scss
+++ b/app/src/pages/user/VerifiedUpload.scss
@@ -1,11 +1,11 @@
 @import '../../styles/_common';
 
 #verified-upload {
-  background: #fff;
+  padding-bottom: 1.2rem;
 
   .notices {
     box-sizing: border-box;
-    padding: 0 30px;
+    padding: 0 3rem 0.9rem;
     color: $text-color;
     font-size: $font-assistant;
     font-weight: 600;
@@ -13,15 +13,35 @@
   }
 
   .upload-content {
+    position: relative;
     padding: 0 30px;
     margin-top: 2.5rem;
+
+    p {
+      color: $black-font-primary;
+      font-size: $font-context;
+    }
 
     img {
       width: 100%;
     }
-  }
 
+    input[type='file'] {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 1.3rem;
+      bottom: 1.3rem;
+      left: 0;
+      opacity: 0;
+    }
+  }
   .upload-img {
+    position: relative !important;
+    width: 90%;
+    margin: 0 auto;
     margin-top: 4.5rem;
+    left: 0;
+    right: 0;
   }
 }
