--- a/app/src/pages/wallet/Recharge.scss
+++ b/app/src/pages/wallet/Recharge.scss
@@ -1,5 +1,59 @@
 @import '../../styles/_common';
 
 #recharge {
+  @include clearFix;
+  box-sizing: border-box;
+  min-height: 100vh;
+  padding-top: $header-height;
+  font-weight: 600;
 
+  .section-main {
+    text-align: center;
+
+    .qr-code__box {
+      padding: 4.7rem 0;
+
+      button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2.7rem;
+        width: 7.5rem;
+        height: 3.6rem;
+        border: none;
+        border-radius: 1.8rem;
+        background: $primary-color;
+        color: $white;
+        font-size: 2rem;
+      }
+    }
+
+    .address {
+      padding: 1.5rem 0;
+      font-size: 1.3rem;
+
+      p {
+        @include clearBack;
+        margin-bottom: 20px;
+      }
+
+      span {
+        color: $assistant-color;
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .section-aside {
+    padding: 15px 30px;
+    color: $text-sub-color;
+    font-size: $font-assistant;
+
+    p {
+      @include clearBack;
+      padding: 5px 0;
+      line-height: 1.6;
+      text-align: justify;
+    }
+  }
 }
