--- a/app/src/components/common/Captcha.scss
+++ b/app/src/components/common/Captcha.scss
@@ -1,24 +1,26 @@
 @import "../../styles/mixin";
 
-.captcha-box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 3rem;
-  height: 3.6rem;
-  border-bottom: 1px solid $border-color;
+#captcha-box {
+  position: relative;
 
   img {
-    height: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 3.6rem;
   }
 
   input {
-    box-sizing: border-box;
-    padding: 4px 0;
+    @include clearButton;
+    width: 100%;
+    outline: none;
+    padding: 10px 0;
     font-size: 1.3rem;
-    border-radius: $border-radius;
-    border: none;
+    border-bottom: 1px solid $black-border-bottom;
+
+    &:focus {
+      border-bottom: 2px solid $primary-color;
+    }
 
     &::placeholder {
       color: $black-font-primary;
