--- a/app/src/pages/user/UserCenter.scss
+++ b/app/src/pages/user/UserCenter.scss
@@ -13,8 +13,10 @@
     margin-bottom: 1.4rem;
 
     h1 {
+      margin: 25px 0 60px;
       font-weight: 400;
       img {
+        margin-left: 10px;
         width: 1rem;
         transform: rotate(180deg);
       }
@@ -40,6 +42,7 @@
 
     .list-tip {
       margin-top: 40px;
+      margin-bottom: 10px;
       color: $text-sub-color;
       font-size: $font-assistant + 0.1;
 
@@ -100,6 +103,20 @@
           flex-grow: 1;
         }
       }
+    }
+  }
+
+}
+
+.f-modal {
+  :global {
+    .am-modal-title {
+      font-size: 1.7rem;
+    }
+    p {
+      @include clearBack;
+      text-align: justify;
+      font-size: 1.5rem;
     }
   }
 }
