--- a/app/src/pages/home/InviterFriend.scss
+++ b/app/src/pages/home/InviterFriend.scss
@@ -39,12 +39,11 @@
     p {
       display: inline-flex;
       flex-direction: row;
-      justify-content: center;
       align-items: center;
 
       margin-top: 4rem;
-      height: 36px;
-      padding: 0 15px;
+      padding: 8px 15px;
+      line-height: 1.2;
       background: rgba(247, 247, 247, 1);
       font-size: $font-context;
       color: $text-sub-color;
@@ -58,7 +57,7 @@
   }
 
   .section-link {
-    padding: 6rem 2rem;
+    padding: 5rem 2rem;
 
     a {
       display: block;
