--- a/app/src/pages/login/Login.scss
+++ b/app/src/pages/login/Login.scss
@@ -36,7 +36,7 @@
           border-bottom: 2px solid $primary-color;
         }
 
-        &:placeholder {
+        &::placeholder {
           color: $black-font-primary;
           font-weight: 500;
         }
@@ -56,9 +56,10 @@
       display: flex;
       justify-content: space-between;
       font-size: $font-assistant + 0.1;
-      margin-top: 2.5rem;
 
       a {
+        display: inline-block;
+        padding: 10px 0;
         color: $black-font-primary;
         text-decoration: none;
       }
