--- a/app/src/components/common/Footer.scss
+++ b/app/src/components/common/Footer.scss
@@ -8,6 +8,7 @@ footer {
   height: 49px;
   border-top: 1px solid #fafafa;
   border-top: 1px solid #fafafa;
+  background: #fff;
 
   ul {
     @include clearList;
