--- a/app/src/pages/login/Password.scss
+++ b/app/src/pages/login/Password.scss
@@ -1,6 +1,10 @@
 @import '../../styles/_common';
 
 #password {
+  @include clearFix;
   position: relative;
-  height: 100vh;
+  box-sizing: border-box;
+  min-height: 100vh;
+  padding-bottom: 10rem;
+  background: $white;
 }
