--- a/app/src/pages/login/Register.scss
+++ b/app/src/pages/login/Register.scss
@@ -3,7 +3,9 @@
 #register {
   position: relative;
   box-sizing: border-box;
-  height: 100vh;
+  padding-bottom: 10rem;
+  background: $white;
+  min-height: 100vh;
 
   header {
     padding-top: 5rem;
