update auth info

--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -67,6 +67,10 @@
         .text {
           font-size: $font-assistant;
 
+          span{
+            font-size: $font-title-s;
+          }
+
           b {
             font-size: 2.1rem;
             font-weight: normal;
