--- a/app/src/pages/home/InviterFriend.scss
+++ b/app/src/pages/home/InviterFriend.scss
@@ -38,7 +38,7 @@
       span {
         display: inline-block;
         margin-top: 0.8rem;
-        color: $assistant-color;
+        color: $text-sub-color;
       }
     }
 
