--- a/app/src/pages/home/GeneralizeDetail.scss
+++ b/app/src/pages/home/GeneralizeDetail.scss
@@ -2,25 +2,32 @@
 
 #generalize-detail {
   padding-top: $header-height;
+  header {
+    background: $white;
+  }
 
   ul {
     @include clearList;
-    padding: 15px 24px;
+    padding: 15px 20px;
 
     li {
       display: flex;
       flex-direction: row;
-      padding: 9px 0;
+      padding: 4px 0;
       line-height: 1.6;
       font-weight: 600;
 
       span {
-        display: inline-block;
+        display: block;
         width: 60%;
+        margin-right: 10px;
+        padding: 5px 0;
         color: #5A5A5A;
+        overflow-y: auto;
       }
 
       time {
+        padding: 5px 0;
         color: #A7A7A9;
       }
 
