--- a/app/src/pages/login/Register.scss
+++ b/app/src/pages/login/Register.scss
@@ -88,8 +88,8 @@
     bottom: 0;
     left: 0;
     background: $white;
-    min-height: 100vh;
     z-index: 99;
+    padding-bottom: 10rem;
 
     main {
       display: flex;
@@ -107,6 +107,19 @@
         font-weight: 500;
         color: $text-color;
       }
+    }
+
+    .btn {
+      @include clearButton;
+      position: absolute;
+      left: 20px;
+      right: 20px;
+      bottom: 5rem;
+      height: 5rem;
+      border-radius: 2.5rem;
+      color: #fff;
+      background-color: $primary-color;
+      font-size: 1.5rem;
     }
   }
 }
