--- a/app/src/components/partial/DepositUnlock.scss
+++ b/app/src/components/partial/DepositUnlock.scss
@@ -1,7 +1,12 @@
 @import '../../styles/_common';
-.unlock-limit {
-  height: 90%;
+
+.deposit-unlock {
+  display: none;
   text-align: center;
+
+  &.show{
+    display: block;
+  }
 
   section {
     box-sizing: border-box;
@@ -14,18 +19,15 @@
         margin-bottom: -1px;
       }
 
-      span,
-      a {
-        font-size: $font-assistant + 0.1;
-      }
-
       a {
         color: #2564c1;
         text-decoration: underline;
+        font-size: $font-assistant + 0.1;
       }
 
       span {
         color: $text-sub-color;
+        font-size: $font-assistant + 0.1;
       }
     }
 
@@ -75,5 +77,16 @@
         margin-top: 30px;
       }
     }
+  }
+
+  .btn {
+    @include clearButton;
+    margin: 50px 20px 20px;
+    height: 5rem;
+    border-radius: 2.5rem;
+    color: #fff;
+    background-color: $primary-color;
+    font-size: 1.5rem;
+    text-align: center;
   }
 }
