--- a/app/src/styles/mixin.scss
+++ b/app/src/styles/mixin.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import './_variable';
+@import './_variable-httc';
 
 /*超行溢出显示省略号*/
 @mixin overflow($num: 1, $fontSize: 0, $lineHeight: 1.5) {
@@ -69,10 +69,10 @@
   background: $color-from;
   background: -moz-linear-gradient(left, $color-from 0%, $color-to 100%);
   background: -webkit-gradient(
-    left top,
-    right top,
-    color-stop(0%, $color-from),
-    color-stop(100%, $color-to)
+      left top,
+      right top,
+      color-stop(0%, $color-from),
+      color-stop(100%, $color-to)
   );
   background: -webkit-linear-gradient(left, $color-from 0%, $color-to 100%);
   background: -o-linear-gradient(left, $color-from 0%, $color-to 100%);
