--- a/app/src/components/partial/DepositBuy.scss
+++ b/app/src/components/partial/DepositBuy.scss
@@ -4,7 +4,7 @@
   display: none;
   height: 90%;
 
-  &.show{
+  &.show {
     display: block;
   }
 
@@ -118,5 +118,9 @@
     background-color: $primary-color;
     font-size: 1.5rem;
     text-align: center;
+
+    &.btn-disabled {
+      opacity: 0.5;
+    }
   }
 }
