update auth info

--- a/app/src/styles/_variable-httc.scss
+++ b/app/src/styles/_variable-httc.scss
@@ -16,7 +16,7 @@ $gray-dark: #969799;
 $bg-btn-disabled: #a1a4ac;
 
 /* Default colors */
-$primary-color: #e8713a; // 主题色
+$primary-color: #161A3A; // 主题色
 $assistant-color: #2a76dd; // 辅助色
 
 $succeed-color: #29b056; // 通过、成功
