--- a/app/src/styles/mixin.scss
+++ b/app/src/styles/mixin.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import './_variable-httc';
+@import './_variable-xc';
 
 /*超行溢出显示省略号*/
 @mixin overflow($num: 1, $fontSize: 0, $lineHeight: 1.5) {
