update auth info

--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -40,6 +40,10 @@
         font-size: 13px;
         margin-right: 5px;
       }
+
+      span {
+        @include overflow(1);
+      }
     }
 
     .tabs {
