--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -1,7 +1,14 @@
 @import "../../styles/mixin";
 
 #home {
+  position: relative;
+  padding-top: 19.5rem;
+  padding-bottom: $footer-height;
+
   .section-banner {
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 19.5rem;
     background: $primary-color;
     color: $white;
@@ -132,6 +139,7 @@
         justify-content: space-between;
         align-items: center;
 
+        margin-bottom: 10px;
         padding: 8px 15px;
         background: rgba(255, 249, 247, 1);
         border-radius: 7px;
