--- a/app/src/pages/wallet/WalletZbs.scss
+++ b/app/src/pages/wallet/WalletZbs.scss
@@ -1,6 +1,6 @@
 @import '../../styles/_common';
 
-#wallet-usdt {
+#wallet-zbx {
   @include clearFix;
   box-sizing: border-box;
   padding-top: $header-height;
