--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -9,6 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
     height: 19.5rem;
     background: $primary-color;
     color: $white;
