--- a/app/src/pages/user/VerifiedUpload.scss
+++ b/app/src/pages/user/VerifiedUpload.scss
@@ -41,11 +41,6 @@
     }
   }
   .upload-img {
-    position: relative !important;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 4.5rem;
-    left: 0;
-    right: 0;
+    margin: 4.5rem 20px 0;
   }
 }
