--- a/app/src/components/partial/DepositUnlock.scss
+++ b/app/src/components/partial/DepositUnlock.scss
@@ -79,76 +79,54 @@
     }
   }
 
-  .btn {
-    @include clearButton;
+  .primary-button {
     margin: 50px 20px 20px;
-    height: 5rem;
-    border-radius: 2.5rem;
-    color: #fff;
-    background-color: $primary-color;
-    font-size: 1.5rem;
-    text-align: center;
   }
 
-  .ensure-pay__wrapper {
+  .confirm-wrapper {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 4;
-    background: rgba(0, 0, 0, 0.4);
+    z-index: 99;
+
     display: none;
+    background: rgba(0, 0, 0, 0.4);
 
     &.show {
       display: block;
     }
 
-    .ensure-pay__content {
+    .content-box {
       position: absolute;
       bottom: 0;
+      left: 0;
       width: 100%;
-      height: 58%;
-      background: #fff;
-      z-index: 2;
+      background: $white;
+      padding-bottom: 40px;
 
-      .pay-content {
+      .content {
         box-sizing: border-box;
-        padding: 20px;
+        padding: 15px 20px 30px;
 
         p {
+          @include clearBack;
           display: flex;
           justify-content: space-between;
-          color: #25292e;
+          padding: 10px 0;
           font-size: $font-assistant;
-          font-weight: 500;
+          font-weight: 600;
 
-          &:first-child {
-            font-size: $font-title;
+          &.deposit-price {
+            padding: 6px 0;
+            font-size: $font-title-s;
           }
 
-          span {
-            &:first-child {
-              text-align: left;
-            }
-
-            &:last-child {
-              text-align: right;
-            }
-
-            small {
-              color: $text-sub-color;
-              font-size: $font-assistant;
-            }
+          &.service-charge {
+            padding: 5px 0;
+            color: $text-sub-color;
           }
-        }
-
-        .tips {
-          display: inline-block;
-          text-align: left;
-          width: 100%;
-          color: $text-sub-color;
-          font-size: $font-assistant;
         }
 
         .input-box {
@@ -183,6 +161,10 @@
             height: 1.3rem;
           }
         }
+      }
+
+      .primary-button {
+        margin: 0 20px;
       }
     }
   }
