update wallet withdraw records

--- a/app/src/pages/wallet/Withdraw.scss
+++ b/app/src/pages/wallet/Withdraw.scss
@@ -98,6 +98,10 @@ $text-sub-color: #ABABAB;
             margin-right: 5px;
             width: 15px;
           }
+
+          &.count-down{
+            color: #ccc;
+          }
         }
       }
 
