--- a/app/src/pages/login/Login.scss
+++ b/app/src/pages/login/Login.scss
@@ -2,19 +2,13 @@
 
 #login {
   position: relative;
+  box-sizing: border-box;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  header {
-    padding-top: 5rem;
-    padding-bottom: 1rem;
-  }
-
-  h2 {
-    font-size: $font-title-xl;
-    font-weight: 400;
-  }
-
-  .login-content {
+  .content {
     box-sizing: border-box;
     padding: 0 20px;
 
@@ -64,5 +58,9 @@
         text-decoration: none;
       }
     }
+  }
+
+  .bottom{
+    padding: 5rem 20px;
   }
 }
