--- a/app/src/pages/wallet/Recharge.scss
+++ b/app/src/pages/wallet/Recharge.scss
@@ -10,21 +10,11 @@
   .section-main {
     text-align: center;
 
-    .qr-code__box {
+    .qr-code__group {
       padding: 4.7rem 0;
 
-      button {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 2.7rem;
-        width: 7.5rem;
-        height: 3.6rem;
-        border: none;
-        border-radius: 1.8rem;
-        background: $primary-color;
-        color: $white;
-        font-size: 2rem;
+      span{
+        color: $text-disable-color;
       }
     }
 
