update wallet withdraw records

--- a/app/src/components/partial/WalletCard.scss
+++ b/app/src/components/partial/WalletCard.scss
@@ -23,6 +23,10 @@
       font-size: $font-assistant;
       font-weight: normal;
     }
+
+    aside{
+      font-size: $font-assistant;
+    }
   }
 
   ul {
