--- a/app/src/pages/user/UserCenter.scss
+++ b/app/src/pages/user/UserCenter.scss
@@ -119,6 +119,7 @@
     }
   }
 }
-// .zopim {
-//   top: 50%;
-// }
+
+.meshim_widget_components_mobileChatButton_ButtonBar .button_text {
+  background: red !important;
+}
