--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,4 +1,4 @@
-@import "~@csstools/normalize.css";
+@import '~@csstools/normalize.css';
 
 html {
   font-size: 10px;
@@ -26,14 +26,19 @@ html {
 body {
   margin: 0;
   font-size: 1.4rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.meshim_widget_components_mobileChatButton_ButtonBar .button_text {
+  color: red !important;
+  background-color: red !important;
 }
