--- a/app/src/styles/_variable-nttc.scss
+++ b/app/src/styles/_variable-nttc.scss
@@ -17,7 +17,8 @@ $bg-btn-disabled: #a1a4ac;
 
 /* Default colors */
 $primary-color: #161A3A; // 主题色
-$assistant-color: #2a76dd; // 辅助色
+$primary-color-gradient: #3a438ef5; // 蓝色渐变
+$assistant-color: #73768a; // 辅助色
 
 $succeed-color: #29b056; // 通过、成功
 $warn-color: #fa8100; // 提醒、警告
