--- a/app/src/styles/_variable-xc.scss
+++ b/app/src/styles/_variable-xc.scss
@@ -17,7 +17,7 @@ $bg-btn-disabled: #a1a4ac;
 
 /* Default colors */
 $primary-color: #e8713a; // 主题色
-$assistant-color: #2a76dd; // 辅助色
+$assistant-color: #f5b99f; // 辅助色
 
 $succeed-color: #29b056; // 通过、成功
 $warn-color: #fa8100; // 提醒、警告
