--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -11,8 +11,11 @@
     left: 0;
     width: 100%;
     height: 19.5rem;
-    background: $primary-color;
+    //background: $primary-color;
     color: $white;
+    //background-image: url("");
+    background-size: cover;
+    background-position: center;
 
     a {
       color: inherit;
