--- a/app/src/pages/home/Index.scss
+++ b/app/src/pages/home/Index.scss
@@ -5,6 +5,11 @@
   padding-top: 19.5rem;
   padding-bottom: $footer-height;
 
+  header img{
+    width: 1.62rem;
+    height: 1.8rem;
+  }
+
   .section-banner {
     position: fixed;
     top: 0;
