--- a/app/src/styles/_variable-xc.scss
+++ b/app/src/styles/_variable-xc.scss
@@ -18,6 +18,8 @@ $bg-btn-disabled: #a1a4ac;
 /* Default colors */
 $primary-color: #e8713a; // 主题色
 $assistant-color: #f5b99f; // 辅助色
+//$primary-color-gradient: #3a438ef5; // 蓝色渐变
+$primary-color-gradient: #e8713a;
 
 $succeed-color: #29b056; // 通过、成功
 $warn-color: #fa8100; // 提醒、警告
