--- a/app/src/pages/notice/NoticeDetail.scss
+++ b/app/src/pages/notice/NoticeDetail.scss
@@ -1,6 +1,8 @@
 @import '../../styles/_common';
 
 #iframe-notice {
-  margin-top: $header-height;
+  box-sizing: border-box;
+  padding-top: $header-height;
   width: 100%;
+  height: 100vh;
 }
